--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -31,6 +31,6 @@
 </div>
 
     </section>
-    <script src="./1-timer.js" type="module"></script>
+    <script src="./js/1-timer.js" type="module"></script>
   </body>
 </html>
