--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -30,6 +30,6 @@
       </form>
       
     </section>
-    <script src="./2-snackbar.js" type="module"></script>
+    <script src="./js/2-snackbar.js" type="module"></script>
   </body>
 </html>
